# open-api/immich-openapi-specs.json
@@ -2382,7 +2382,7 @@
             }
           },
           {
-            "name": "resizePath",
+            "name": "previewPath",
             "required": false,
             "in": "query",
             "schema": {
@@ -2420,6 +2420,14 @@
             "in": "query",
             "schema": {
               "format": "date-time",
+              "type": "string"
+            }
+          },
+          {
+            "name": "thumbnailPath",
+            "required": false,
+            "in": "query",
+            "schema": {
               "type": "string"
             }
           },
@@ -2464,14 +2472,6 @@
             "in": "query",
             "schema": {
               "format": "date-time",
-              "type": "string"
-            }
-          },
-          {
-            "name": "webpPath",
-            "required": false,
-            "in": "query",
-            "schema": {
               "type": "string"
             }
           },
@@ -7776,7 +7776,7 @@
           "id": {
             "type": "string"
           },
-          "resizePath": {
+          "previewPath": {
             "type": "string"
           }
         },
@@ -7785,7 +7785,7 @@
           "deviceAssetId",
           "deviceId",
           "id",
-          "resizePath"
+          "previewPath"
         ],
         "type": "object"
       },
@@ -7803,7 +7803,7 @@
           "object": {
             "type": "string"
           },
-          "resizePath": {
+          "previewPath": {
             "type": "string"
           }
         },
@@ -7812,7 +7812,7 @@
           "deviceId",
           "id",
           "object",
-          "resizePath"
+          "previewPath"
         ],
         "type": "object"
       },
@@ -8105,6 +8105,13 @@
           "pathValue"
         ],
         "type": "object"
+      },
+      "ImageFormat": {
+        "enum": [
+          "jpeg",
+          "webp"
+        ],
+        "type": "string"
       },
       "JobCommand": {
         "enum": [
@@ -8542,7 +8549,7 @@
             },
             "type": "array"
           },
-          "resizePath": {
+          "previewPath": {
             "type": "string"
           },
           "size": {
@@ -8557,6 +8564,9 @@
           },
           "takenBefore": {
             "format": "date-time",
+            "type": "string"
+          },
+          "thumbnailPath": {
             "type": "string"
           },
           "trashedAfter": {
@@ -8576,9 +8586,6 @@
           },
           "updatedBefore": {
             "format": "date-time",
-            "type": "string"
-          },
-          "webpPath": {
             "type": "string"
           },
           "withArchived": {
@@ -8733,8 +8740,8 @@
       "PathType": {
         "enum": [
           "original",
-          "jpeg_thumbnail",
-          "webp_thumbnail",
+          "preview",
+          "thumbnail",
           "encoded_video",
           "sidecar",
           "face",
@@ -10243,21 +10250,29 @@
           "colorspace": {
             "$ref": "#/components/schemas/Colorspace"
           },
-          "jpegSize": {
+          "previewFormat": {
+            "$ref": "#/components/schemas/ImageFormat"
+          },
+          "previewSize": {
             "type": "integer"
           },
           "quality": {
             "type": "integer"
           },
-          "webpSize": {
+          "thumbnailFormat": {
+            "$ref": "#/components/schemas/ImageFormat"
+          },
+          "thumbnailSize": {
             "type": "integer"
           }
         },
         "required": [
           "colorspace",
-          "jpegSize",
+          "previewFormat",
+          "previewSize",
           "quality",
-          "webpSize"
+          "thumbnailFormat",
+          "thumbnailSize"
         ],
         "type": "object"
       },
