# server/src/cores/storage.core.ts
@@ -34,7 +34,8 @@ export interface MoveRequest {
   };
 }
 
-type GeneratedAssetPath = AssetPathType.JPEG_THUMBNAIL | AssetPathType.WEBP_THUMBNAIL | AssetPathType.ENCODED_VIDEO;
+export type GeneratedImageType = AssetPathType.PREVIEW | AssetPathType.THUMBNAIL;
+export type GeneratedAssetType = GeneratedImageType | AssetPathType.ENCODED_VIDEO;
 
 let instance: StorageCore | null;
 
@@ -94,12 +95,8 @@ export class StorageCore {
     return StorageCore.getNestedPath(StorageFolder.THUMBNAILS, person.ownerId, `${person.id}.jpeg`);
   }
 
-  static getLargeThumbnailPath(asset: AssetEntity) {
-    return StorageCore.getNestedPath(StorageFolder.THUMBNAILS, asset.ownerId, `${asset.id}.jpeg`);
-  }
-
-  static getSmallThumbnailPath(asset: AssetEntity) {
-    return StorageCore.getNestedPath(StorageFolder.THUMBNAILS, asset.ownerId, `${asset.id}.webp`);
+  static getImagePath(asset: AssetEntity, type: GeneratedImageType) {
+    return StorageCore.getNestedPath(StorageFolder.THUMBNAILS, asset.ownerId, `${asset.id}.${type}`);
   }
 
   static getEncodedVideoPath(asset: AssetEntity) {
@@ -122,23 +119,23 @@ export class StorageCore {
     return path.startsWith(THUMBNAIL_DIR) || path.startsWith(ENCODED_VIDEO_DIR);
   }
 
-  async moveAssetFile(asset: AssetEntity, pathType: GeneratedAssetPath) {
-    const { id: entityId, resizePath, webpPath, encodedVideoPath } = asset;
+  async moveAssetFile(asset: AssetEntity, pathType: GeneratedAssetType) {
+    const { id: entityId, previewPath, thumbnailPath, encodedVideoPath } = asset;
     switch (pathType) {
-      case AssetPathType.JPEG_THUMBNAIL: {
+      case AssetPathType.PREVIEW: {
         return this.moveFile({
           entityId,
           pathType,
-          oldPath: resizePath,
-          newPath: StorageCore.getLargeThumbnailPath(asset),
+          oldPath: previewPath,
+          newPath: StorageCore.getImagePath(asset, AssetPathType.PREVIEW),
         });
       }
-      case AssetPathType.WEBP_THUMBNAIL: {
+      case AssetPathType.THUMBNAIL: {
         return this.moveFile({
           entityId,
           pathType,
-          oldPath: webpPath,
-          newPath: StorageCore.getSmallThumbnailPath(asset),
+          oldPath: thumbnailPath,
+          newPath: StorageCore.getImagePath(asset, AssetPathType.THUMBNAIL),
         });
       }
       case AssetPathType.ENCODED_VIDEO: {
@@ -288,11 +285,11 @@ export class StorageCore {
       case AssetPathType.ORIGINAL: {
         return this.assetRepository.update({ id, originalPath: newPath });
       }
-      case AssetPathType.JPEG_THUMBNAIL: {
-        return this.assetRepository.update({ id, resizePath: newPath });
+      case AssetPathType.PREVIEW: {
+        return this.assetRepository.update({ id, previewPath: newPath });
       }
-      case AssetPathType.WEBP_THUMBNAIL: {
-        return this.assetRepository.update({ id, webpPath: newPath });
+      case AssetPathType.THUMBNAIL: {
+        return this.assetRepository.update({ id, thumbnailPath: newPath });
       }
       case AssetPathType.ENCODED_VIDEO: {
         return this.assetRepository.update({ id, encodedVideoPath: newPath });
